Create Database Structure, Added ERD

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
 
 
 <!-- Input Section -->
-<div id="booking" class="section">
+<div id="booking" class="section"">
     <div class="section-center">
         <div class="container">
             <div class="row">
@@ -48,7 +48,7 @@
                 <div class="col-md-7 col-md-push-5">
                     <div class="booking-cta">
                         <h1>Make your reservation NOW!</h1>
-                        <p>is a premium online booking portal which allows you to purchase tickets for </br>
+                        <p>DeshTrip is a premium online booking portal which allows you to purchase tickets for </br>
                             various bus services,launch services, air tickets and events.</p>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                         <form>
                             <!-- Destination From  -->
                             <div class="form-group">
-                                <span class="form-label">From</span>
+                                <span class="form-label">Form</span>
                                 <select class="form-control" id="sel1" name="sellist1">
                                     <option>1</option>
                                     <option>2</option>
