--- a/templates/bus_list.html
+++ b/templates/bus_list.html
@@ -25,14 +25,19 @@
         <!-- Left Side -->
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="{{url_for('index')}}">Home</a>
             </li>
         </ul>
 
         <!-- Right Side -->
         <ul class="navbar-nav ml-auto">
+            {% if full_name != None %}
             <li class="nav-item">
-                <a class="nav-link">Signup/Login</a>
+                <a class="nav-link">Welcome, {{session['user_name']}}</a>
+            </li>
+            {% endif %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{url_for('log_out')}}">Sign-Out</a>
             </li>
         </ul>
     </div>
