--- a/templates/index.html
+++ b/templates/index.html
@@ -25,97 +25,102 @@
         <!-- Left Side -->
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="{{url_for('index')}}">Home</a>
             </li>
         </ul>
+
         <!-- Right Side -->
         <ul class="navbar-nav ml-auto">
+            {% if full_name != None %}
             <li class="nav-item">
-                <a class="nav-link">Signup/Login</a>
+                <a class="nav-link">Welcome, {{session['user_name']}}</a>
+            </li>
+            {% endif %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{url_for('log_out')}}">Sign-Out</a>
             </li>
         </ul>
+
     </div>
 </nav>
 
 
 <!-- Input Section -->
 <div id="booking" class="section"">
-    <div class="section-center">
-        <div class="container">
-            <div class="row">
+    <div class=" section-center">
+    <div class="container">
+        <div class="row">
 
-                <!-- Intro -->
-                <div class="col-md-7 col-md-push-5">
-                    <div class="booking-cta">
-                        <h1>Make your reservation NOW!</h1>
-                        <p>DeshTrip is a premium online booking portal which allows you to purchase tickets for </br>
-                            various bus services,launch services, air tickets and events.</p>
-                    </div>
+            <!-- Intro -->
+            <div class="col-md-7 col-md-push-5">
+                <div class="booking-cta">
+                    <h1>Make your reservation</h1>
+                    <p>DeshTrip is a premium online booking portal which allows you to purchase tickets for </br>
+                        various bus services,launch services, air tickets and events.</p>
                 </div>
+            </div>
 
-                <!-- Booking Brom -->
-                <div class="col-md-4 col-md-pull-7">
-                    <div class="booking-form">
-                        <form>
-                            <!-- Destination From  -->
-                            <div class="form-group">
-                                <span class="form-label">Form</span>
-                                <select class="form-control" id="sel1" name="sellist1">
-                                    <option>1</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                </select>
-                            </div>
+            <!-- Booking Brom -->
+            <div class="col-md-4 col-md-pull-7">
+                <div class="booking-form">
+                    <h4>BOOK NOW</h4>
+                    <form action="{{ url_for('bus_list') }}" method="GET">
+                        <!-- Destination From  -->
+                        <div class="form-group">
+                            <span class="form-label">FROM</span>
+                            <select class="form-control" id="form-id" name="from">
+                                <option>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                            </select>
+                        </div>
 
-                            <!-- Destination TO  -->
-                            <div class="form-group">
-                                <span class="form-label">To</span>
-                                <select class="form-control" id="sel1" name="sellist1">
-                                    <option>1</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                </select>
-                            </div>
+                        <!-- Destination TO  -->
+                        <div class="form-group">
+                            <span class="form-label">TO</span>
+                            <select class="form-control" id="to-id" name="to">
+                                <option>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                            </select>
+                        </div>
 
-                            <!-- Date Input -->
-                            <div class="form-group">
-                                <span class="form-label">Date</span>
-                                <input class="form-control" type="date" value="2011-08-19" id="example-date-input">
-                            </div>
+                        <!-- Date Input -->
+                        <div class="form-group">
+                            <span class="form-label">DATE</span>
+                            <input id="date-id" class="form-control" type="date" value="2020-10-18" name="date">
+                        </div>
 
-                            <!-- Time Input -->
-                            <div class="form-group">
-                                <span class="form-label">Time</span>
-                                <input class="form-control" type="time" value="13:45:00" id="example-time-input">
-                            </div>
+                        <!-- Set Needed Seat  -->
+                        <div class="form-group">
+                            <span class="form-label">SEAT NEEDED?</span>
+                            <select class="form-control" id="set_needed" name="sellist1">
+                                <option>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                            </select>
+                        </div>
 
-                            <!-- Set Needed Seat  -->
-                            <div class="form-group">
-                                <span class="form-label">Seat Needed?</span>
-                                <select class="form-control" id="set_needed" name="sellist1">
-                                    <option>1</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                </select>
-                            </div>
+                        <!-- Submition Button -->
+                        <div class="form-btn">
+                            <button class="btn btn-primary btn-block">Check availability</button>
+                        </div>
+                    </form>
 
-                            <!-- Submition Button -->
-                            <div class="form-btn">
-                                <button class="btn btn-primary btn-block">Check availability</button>
-                            </div>
-                        </form>
-
-                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+</div>
 {% endblock %}
 
 <!-- Body Footer End -->
 {% block footer_js %}
+<script>
+$('#date-id').datepicker({format:'dd/mm/yyyy',}).datepicker("setDate",'now');
+</script>
 {% endblock %}
