Created Buslist Page, Fixed some  CSS Issues, Added new features in DB

--- a/templates/home_base.html
+++ b/templates/home_base.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body style="background-color: #f5f6ff;">
+<body style="background-color: #fbfcff;">
 
     <!-- {# Body Block #} -->
     {% block body %}
